# somerville.events

./: .env.sample  AGENTS.md  CRON_SETUP.md  Cargo.toml  PERFORMANCE_PLAN.md  PROFILING.md  README.md  askama.toml  deploy.sh  homepage.html  pre-commit  profile.sh  reset_database.sh  reset_database.sql  verification_script.py
.cargo/: audit.toml
.sqlx/: query-0109c021b4d991eec938c8c80972cdac0c0f3cec6da60ef2b67cf0e695832887.json  query-0b234032006762329da9f411104fe00f82c54b390ed0fe205af412bf0fe90741.json  query-0e7612d73a1cf21c7af4df38c5295ca65acee088ae70aebde36d89a41d29b3ce.json  query-16abe87245f4f1fa3b2c07f4917bd07448797dbec9ef40bcdedffe41d0ac04cf.json  query-1b6b581136038e5eae1abe96969d9e5dfa732f6d78f48fecd1fc59b9dd53f985.json  query-1d624000d0f8c0316e23d1728c65439570d476c5c2f07e38e1442b994bd53b85.json  query-1f4030801fca5a5bf2ca427ab24b40dce13a25477e6dacee4ee6f209d5577483.json  query-20b10088ba5824194d396224346af182d8491b6835cbd9f04f55a9bfa5e9e94e.json  query-20cf93dbeb4bad918aebcff707e7680249dc9bb9debf3687d4ae67c96f61be21.json  query-27727a137e5090f7305e360554c791e8411cef7ad2dc9a1cd2d348bb1fafc090.json  query-27dbacc98e3bdf392745d09583ee9047c512d1cb56dbc50d6d24df7be7214fee.json  query-2b9ea828c595bb50b3a99e9e38fc4f2a6a335aac4d009e2c718d3eac5218553b.json  query-310f48a7f4596a3b29b762322f6c5e36b4c899c82cdd0cbcbf4014313f5cd810.json  query-3114a283365d0fd7d796938d3391005ec8a2f421debe0d18b80c63f6619b92de.json  query-32e883890ca36709f47af4cc41705ef1519a7b1a9b048dbb9a50ad11d8873090.json  query-387c070fb2c794fe1e9c0641ad62c5baf624a07d2e70ca58f701bfae99e578a1.json  query-45a28a3f82485e9cf61408ca9454c494a69b0433f608cb82aab56ddb2d28b399.json  query-49e7982f2ed21c7d8ccb00b4c82cba2548ba2e9d832c7395c4dc47d86e48bb52.json  query-5066eb68023723540d72b71e07d2f0b7c603dba62ef47042c4328677aa653c2c.json  query-58cacda50956596dfa9d825b9cc16e98dedeba80f6c520fba03a365676d0a355.json  query-5e8231fb52057cdda1895165b1200afcc75ffd16824559dcca9a7effcafdb6af.json  query-619a1b5c8b0d2657ca67b84099aaf5383fa2aa7a6de79a6f8899120cbbc5ef68.json  query-63e64e01093444df84cf28d45f820a7431965f132c968a8a6005db28d5191178.json  query-731189fc2d59797beb279eca116f3ad5eed338c35a56a392ec8f50652ec36cc4.json  query-75307eef290368c1fac9aa410ffe3132e2e5bb1f10c52f9bad252a5a758f99b9.json  query-7bc9e830620809a320c6b12e99289434aaf6481da312f05e6cc8a6366d709254.json  query-82675561d0af4b8269ec145c4abcee7ede5a7a475040143192fc35b79109aa2f.json  query-868a8b8640b291b9a18980ef6a321e8cad4a12bff2a05fbbb766e3a2fb0ef17f.json  query-88709d61be85e39534a2ab4ede30ec6293af7794f7343c75ce9ac95e481da8e4.json  query-910d44188ec400ad2fa1d7771c571810b66c25662f9a531411dd0f64902584dd.json  (+25 more)
benches/: e2e.rs  fixtures.rs
(+90 files in other folders)
