[package]
name = "somerville-events"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2"            # async runtime for Actix
awc = { version = "3", features = ["rustls"] }  # Actix HTTP client with TLS support
serde_json = "1"
serde = { version = "1", features = ["derive"] }  # Serialization/deserialization
schemars = { version = "0.8", features = ["derive"] }  # JSON Schema generation
chrono = { version = "0.4", features = ["serde"] }  # DateTime handling with serde support
base64 = "0.22"
mime_guess = "2"
anyhow = "1"
futures-util = "0.3"
dotenv = "0.15"           # Environment variable loading
