[package]
name = "somerville-events"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
awc = { version = "3.7.0", features = ["rustls-0_23-webpki-roots"] }
rustls = "0.23.31"
rustls-platform-verifier = "0.6.1"
actix-rt = "2" # async runtime for Actix
actix-web = "4"
actix-multipart = "0.7.2"
serde_json = "1"
serde = { version = "1", features = ["derive"] } # Serialization/deserialization
schemars = { version = "0.8", features = ["derive"] } # JSON Schema generation
chrono = { version = "0.4", features = [
    "serde",
] } # DateTime handling with serde support
base64 = "0.22"
mime_guess = "2"
anyhow = "1"
futures-util = "0.3"
dotenvy = "0.15.7" # Environment variable loading
